# clipr

./: .project  Cargo.toml  readme.adoc  rusty-tags.vi
src/: main.rs
